Fix Header Z-index Links

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -79,3 +79,10 @@
   z-index:1100;
 }
 
+.left-content{
+  z-index:1000;
+}
+
+.right-content{
+  z-index:1000;
+}
